force-app/main/default/objects/Vanquish__c/Vanquish__c.object-meta.xml
<CustomObject>
    <label>Vanquish</label>
    <nameField>
        <label>Vanquish Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vanquish</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>