force-app/main/default/objects/Vanquish__c/fields/Employee_removal_initials__c.field-meta.xml
<CustomField>
    <fullName>Employee_removal_initials__c</fullName>
    <label>Employee removal initials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>