force-app/main/default/objects/Vanquish__c/fields/Hook_up_initials__c.field-meta.xml
<CustomField>
    <fullName>Hook_up_initials__c</fullName>
    <label>Hook-up initials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>