force-app/main/default/objects/Vanquish__c/fields/Tx_time__c.field-meta.xml
<CustomField>
    <fullName>Tx_time__c</fullName>
    <label>Tx time</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 Minutes</fullName>
            </value>
            <value>
                <fullName>40 Minutes</fullName>
            </value>
            <value>
                <fullName>45 Minutes</fullName>
            </value>
            <value>
                <fullName>60 Minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>